@@ -1,9 +1,9 @@
 <html>
   <body>
     <a href="thing.html"><b>Bold Dude</b></a>
-    <a href="thing.html">Dude</a>
-    <a href="thing.html">Aaron <b>James</b> Patterson</a>
-    <a href="thing.html" id="bold_aaron_link"><b>Aaron</b> Patterson</a>
+    <a href="thing.html" rel="nofollow">Dude</a>
+    <a href="thing.html" rel="me">Aaron <b>James</b> Patterson</a>
+    <a href="thing.html" id="bold_aaron_link" rel="me nofollow"><b>Aaron</b> Patterson</a>
     <a href="thing.html">Ruby <b>Rocks!</b></a>
     <!-- Testing a bug with escaped stuff in links:
       http://rubyforge.org/pipermail/mechanize-users/2006-September/000002.html
